{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 3,
  "lineage": "1743c9a4-2a64-04aa-30ae-213c20f683e5",
  "resources": [
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1c8cec0cceeefbb",
            "arn": "arn:aws:ec2:us-west-1:089622251853:elastic-ip/eipalloc-0c1c8cec0cceeefbb",
            "associate_with_private_ip": "10.0.10.10",
            "association_id": "eipassoc-04f1a332ca8c39783",
            "domain": "vpc",
            "id": "eipalloc-0c1c8cec0cceeefbb",
            "network_border_group": "us-west-1",
            "network_interface": "eni-004ec4765e94fe4c3",
            "private_dns": "ip-10-0-10-10.us-west-1.compute.internal",
            "private_ip": "10.0.10.10",
            "public_dns": "ec2-54-241-122-83.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.122.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "vpc": true
          },
          "dependencies": [
            "module.infrastructure.aws_network_interface.mgmt",
            "module.infrastructure.aws_security_group.mgmt",
            "module.infrastructure.aws_subnet.mgmt",
            "module.infrastructure.aws_vpc.vpc",
            "module.infrastructure.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_vip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd436ae624ca81d1",
            "arn": "arn:aws:ec2:us-west-1:089622251853:elastic-ip/eipalloc-0cd436ae624ca81d1",
            "associate_with_private_ip": "10.0.12.10",
            "association_id": "eipassoc-00e2e3e06ad2522e6",
            "domain": "vpc",
            "id": "eipalloc-0cd436ae624ca81d1",
            "network_border_group": "us-west-1",
            "network_interface": "eni-02062735a6af01095",
            "private_dns": "ip-10-0-12-10.us-west-1.compute.internal",
            "private_ip": "10.0.12.10",
            "public_dns": "ec2-54-241-247-97.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.247.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "vpc": true
          },
          "dependencies": [
            "module.infrastructure.aws_network_interface.external",
            "module.infrastructure.aws_security_group.external",
            "module.infrastructure.aws_subnet.external",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "big_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3013461e16d9249",
            "arn": "arn:aws:ec2:us-west-1:089622251853:instance/i-0b74cc032702c971d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b74cc032702c971d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "demolab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-004ec4765e94fe4c3"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-02062735a6af01095"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_card_index": 0,
                "network_interface_id": "eni-0158aa6740b1b6a6f"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-004ec4765e94fe4c3",
            "private_dns": "ip-10-0-10-10.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.10",
            "public_ip": "54.241.122.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-0a59cd75609fde928",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3ada28e141abb26",
            "tags": {
              "CostCenter": "f5lab",
              "Environment": "lab",
              "Name": "bigip"
            },
            "tags_all": {
              "CostCenter": "f5lab",
              "Environment": "lab",
              "Name": "bigip"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-037fca549c8fd214b"
            ]
          },
          "dependencies": [
            "module.infrastructure.aws_network_interface.external",
            "module.infrastructure.aws_network_interface.internal",
            "module.infrastructure.aws_network_interface.mgmt",
            "module.infrastructure.aws_security_group.external",
            "module.infrastructure.aws_security_group.internal",
            "module.infrastructure.aws_security_group.mgmt",
            "module.infrastructure.aws_subnet.external",
            "module.infrastructure.aws_subnet.internal",
            "module.infrastructure.aws_subnet.mgmt",
            "module.infrastructure.aws_vpc.vpc",
            "module.infrastructure.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f7a54071e74f488",
            "arn": "arn:aws:ec2:us-west-1:089622251853:instance/i-030ba5fd95c4c55f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030ba5fd95c4c55f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demolab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b56fd019dcc17b16",
            "private_dns": "ip-10-0-12-101.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.101",
            "public_ip": "13.57.211.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02cd694206dd8a390",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b65064f691d760e8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce13828df67a37c7",
            "tags": {
              "Environment": "lab",
              "Name": "webserver_1"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "webserver_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b65064f691d760e8"
            ]
          },
          "dependencies": [
            "module.infrastructure.aws_security_group.webserver",
            "module.infrastructure.aws_subnet.external",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f7a54071e74f488",
            "arn": "arn:aws:ec2:us-west-1:089622251853:instance/i-0267480ab05e3c1af",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0267480ab05e3c1af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demolab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082b76fa4f9fdb5fb",
            "private_dns": "ip-10-0-12-102.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.102",
            "public_ip": "54.176.239.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a2df196cc2929779",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b65064f691d760e8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce13828df67a37c7",
            "tags": {
              "Environment": "lab",
              "Name": "webserver_2"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "webserver_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b65064f691d760e8"
            ]
          },
          "dependencies": [
            "module.infrastructure.aws_security_group.webserver",
            "module.infrastructure.aws_subnet.external",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:internet-gateway/igw-03c9db31b1013441d",
            "id": "igw-03c9db31b1013441d",
            "owner_id": "089622251853",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:network-interface/eni-02062735a6af01095",
            "id": "eni-02062735a6af01095",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:8b:65:a8:b0:2d",
            "owner_id": "089622251853",
            "private_ip": "10.0.12.10",
            "private_ip_list": [
              "10.0.12.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.12.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06a315bf6100a0418"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce13828df67a37c7",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            }
          },
          "dependencies": [
            "module.infrastructure.aws_security_group.external",
            "module.infrastructure.aws_subnet.external",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:network-interface/eni-0158aa6740b1b6a6f",
            "id": "eni-0158aa6740b1b6a6f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:72:82:8a:2c:a9",
            "owner_id": "089622251853",
            "private_ip": "10.0.11.10",
            "private_ip_list": [
              "10.0.11.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.11.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ff68449e081fa833"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018f20defe78b4b36",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            }
          },
          "dependencies": [
            "module.infrastructure.aws_security_group.internal",
            "module.infrastructure.aws_subnet.internal",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:network-interface/eni-004ec4765e94fe4c3",
            "id": "eni-004ec4765e94fe4c3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:03:74:fc:15:35",
            "owner_id": "089622251853",
            "private_ip": "10.0.10.10",
            "private_ip_list": [
              "10.0.10.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.10.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-037fca549c8fd214b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3ada28e141abb26",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            }
          },
          "dependencies": [
            "module.infrastructure.aws_security_group.mgmt",
            "module.infrastructure.aws_subnet.mgmt",
            "module.infrastructure.aws_vpc.vpc",
            "module.infrastructure.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c9db31b1013441d",
            "id": "r-rtb-055ac8e03001860d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055ac8e03001860d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.aws_internet_gateway.default",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daf349d9657800e7",
            "route_table_id": "rtb-055ac8e03001860d3",
            "subnet_id": "subnet-0ce13828df67a37c7"
          },
          "dependencies": [
            "module.infrastructure.aws_subnet.external",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e61d33321f61acf2",
            "route_table_id": "rtb-055ac8e03001860d3",
            "subnet_id": "subnet-018f20defe78b4b36"
          },
          "dependencies": [
            "module.infrastructure.aws_subnet.internal",
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:security-group/sg-06a315bf6100a0418",
            "description": "allow http and https access to the external interface",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a315bf6100a0418",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bigip_external",
            "name_prefix": "",
            "owner_id": "089622251853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:security-group/sg-0ff68449e081fa833",
            "description": "allow egress traffic to the internal interface",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff68449e081fa833",
            "ingress": [],
            "name": "bigip_internal",
            "name_prefix": "",
            "owner_id": "089622251853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:security-group/sg-037fca549c8fd214b",
            "description": "allow ssh and https access to the management interface",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037fca549c8fd214b",
            "ingress": [
              {
                "cidr_blocks": [
                  "80.52.147.17/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "80.52.147.17/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bigip_mgmt",
            "name_prefix": "",
            "owner_id": "089622251853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc",
            "module.infrastructure.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:security-group/sg-0b65064f691d760e8",
            "description": "allow http access to the webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b65064f691d760e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "089622251853",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:subnet/subnet-0ce13828df67a37c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce13828df67a37c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "089622251853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:subnet/subnet-018f20defe78b4b36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018f20defe78b4b36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "089622251853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:subnet/subnet-0e3ada28e141abb26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3ada28e141abb26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "089622251853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "vpc_id": "vpc-07a427990ad1984e9"
          },
          "dependencies": [
            "module.infrastructure.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:089622251853:vpc/vpc-07a427990ad1984e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e37413a5fce47e6b",
            "default_route_table_id": "rtb-055ac8e03001860d3",
            "default_security_group_id": "sg-02c1421b7fa52b63c",
            "dhcp_options_id": "dopt-eabcb98d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a427990ad1984e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055ac8e03001860d3",
            "owner_id": "089622251853",
            "tags": {
              "Environment": "lab",
              "Name": "f5lab"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "f5lab"
            }
          }
        }
      ]
    }
  ]
}